# Legendary-Software

./: Cargo.toml  README.md  main.py  package.json  style.qss
src/: app.rs  lib.rs  main.rs  package.rs  utils.rs
