[package]
name = "legendary_software"
version = "0.1.0"
edition = "2021"
authors = ["LegendaryOS Team"]
description = "A legendary software GUI built with Rust and eGUI"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
image = "0.24.0"
